--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,28 @@
+# Database (PostgreSQL)
 POSTGRES_USER=yourusername
 POSTGRES_PASSWORD=yourpassword
 POSTGRES_DB=yourdatabase
-POSTGRES_HOST=localhost
+
+# Docker
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-DB_PORT=5433 
-LOG_LEVEL=INFO
-SQLALCHEMY_ECHO=0
+
+# Host port that the DB is exposed on (if you map 5432->5433 in docker-compose)
+DB_PORT=5433
+
+# Logging / SQLAlchemy 
+LOG_LEVEL=INFO            # DEBUG | INFO | WARNING | ERROR
+SQLALCHEMY_ECHO=0         # 1 to log SQL queries, 0 to disable
+
+# Scraper behavior 
+SCRAPER_USER_AGENT=WebScraper/1.0 (+https://example.com/contact)
+SCRAPER_RATE_LIMIT_SECONDS=0.7    # delay between requests
+SCRAPER_REQUEST_TIMEOUT=10        # per-request timeout in seconds
+SCRAPER_RESPECT_ROBOTS=1          # 1=true, 0=false
+
+# Auth / JWT 
+# Generate a real key for .env (not here) with:
+# python -c "import secrets; print(secrets.token_hex(32))"
+SECRET_KEY=change-me
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
