--- a/setup/docker-compose.yml
+++ b/setup/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/code
+      - ../:/code
     depends_on:
       - db
     env_file:
